Fixing spacing for the menu

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -228,9 +228,11 @@
     flex-direction: column;
     flex-wrap: nowrap;
     padding-top: 4px;
-    padding-bottom: calc(var(--margin) * 4);
-    left: 0;
-    padding-left: var(--margin);
+    left:0;
+    padding-left: 36px;
+    padding-bottom:var(--margin);
+    justify-content: flex-start;
+    overflow-y: scroll;
     opacity: 0;
     position: relative;
     z-index: -1;
@@ -258,6 +260,7 @@
 
   .menuToggle {
     display: block;
+    padding-left: var(--gutter-half);
   }
 
   .item {
@@ -285,5 +288,11 @@
     border-left: solid 6px var(--lightgray);
     font-size: var(--text-xlarge);
     padding-bottom: 6px;
+  }
+}
+
+@media (--small) {
+  .menu {
+    padding-left: 24px;
   }
 }
